# pipefolio

./: README.md  pyproject.toml
.github/workflows/: pypi.yml  sphinx.yml
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/_images/: inheritance-15fa2174aa8c4c2666e3c3df8adff1ae66ab16f2.png.map  inheritance-1e25e0761bd8d07b76e230af7ebc676435711a0f.png.map  inheritance-29dd78d71114a52f267e00db80bfe0228732619c.png.map  inheritance-2a2270ccaec93bccf5242f26c55b7ac557b06a9c.png.map  inheritance-3129e174e5fb718b7e335a50c9548e9b9b1dce68.png.map  inheritance-3997d247d92a7f3002826ff567d94b41fb68785e.png.map  inheritance-3d751b773e35fa9766d72c04dcb6be34963a8c25.png.map  inheritance-4e6fafc6a4ec7a5df166b4e6b0ca72abdfaca912.png.map  inheritance-58d5c8fe4f2bf66babd16caf829ea656bc5680e5.png.map  inheritance-60e650be8c7aa05abb7d2a66af88a3db2766b6ee.png.map  inheritance-7c086b84fbdc93f4634a582e25f2bf0f4532bf00.png.map  inheritance-7fd3171318e7aa0a209dd818b539453d41520ff8.png.map  inheritance-840f4cc6375d625ec6585c396be08e1887a33a81.png.map  inheritance-89ab938000542db0cfeb92a0e4e00eafadef5e16.png.map  inheritance-8aec8e0118a3c5a55f25ed1abcb374fb5a9597a5.png.map  inheritance-93cded1a2cb880507a5fb807ba4c5d9e4a873625.png.map  inheritance-96da0c472b6ecc10306af01d57601e9fc4df7165.png.map  inheritance-978fb805fa522790a70072c288f52dd1f2e92f98.png.map  inheritance-97bd6213f8fa2b607236ad230436c6c41d72949a.png.map  inheritance-a26895ed245e5da824133a4ccf2dfda6d8f5d829.png.map  (+10 more)
(+67 files in other folders)
