[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pipefolio"
authors = [{ name = "Kachain Fuangsung" }, { email = "kachain.f@outlook.com" }]
description = "A Pipeline-Oriented Portfolio Optimization Framework"
readme = "README.rst"
requires-python = ">=3.12"
keywords = []
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "scikit-learn >1, <2",
    "skfolio <1",
    "pydantic >=2, <3",
    "Deprecated >=1.2, <2",
    "empyrical-reloaded >=0.5",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "pipefolio.__version__" }
